--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
     <ol class="user-stories">
 
       <li>The API endpoint is
-        <code>GET [project_url]/api/timestamp/:date_string?</code>
+        <code>GET https://af-timestamp-api.herokuapp.com/api/timestamp/:date_string?</code>
       </li>
       <li>A date string is valid if can be successfully parsed by
         <code>new Date(date_string)</code>.
@@ -47,10 +47,10 @@
     <h3>Example Usage:</h3>
     <ul>
       <li>
-        <code>GET [project url]/api/timestamp/2015-12-25</code>
+        <code>GET https://af-timestamp-api.herokuapp.com/api/timestamp/2015-12-25</code>
       </li>
       <li>
-        <code>GET project url]/api/timestamp/1450137600</code>
+        <code>GET https://af-timestamp-api.herokuapp.com/api/timestamp/1450137600</code>
       </li>
     </ul>
 
